fix impost display

--- a/apps/zcalc/zindex.html
+++ b/apps/zcalc/zindex.html
@@ -147,10 +147,10 @@ TODO: добавить отдельную дверь-->
         <div class="imgbox" id="imgbox" data-isbb="false" data-rama-step="3" wintype="fff">
             <img src="img/fff.svg" alt="nope" class="fon" id="fon" data-rama-step="3" wintype="fff" data-stls="wintype"
                 data-loadstate="wintype">
-            <img src="img/s3.svg" alt="nope" class="s1 anim" id="s1" onclick="opaopa(s1)" data-isfix="1">
-            <img src="img/s3.svg" alt="nope" class="s2 anim" id="s2" onclick="opaopa(s2)" data-isfix="1">
-            <img src="img/s3.svg" alt="nope" class="s3 anim" id="s3" onclick="opaopa(s3)" data-isfix="1">
-            <img src="img/door-imp.svg" alt="nope" class="sd anim" id="sd" onclick="opaopa(sd)" data-isfix="1">
+            <img src="img/s3.svg" alt="nope" class="s1 anim" id="s1" onclick="opaopa(s1)" data-isfix="true">
+            <img src="img/s3.svg" alt="nope" class="s2 anim" id="s2" onclick="opaopa(s2)" data-isfix="true">
+            <img src="img/s3.svg" alt="nope" class="s3 anim" id="s3" onclick="opaopa(s3)" data-isfix="true">
+            <img src="img/door-imp.svg" alt="nope" class="sd anim" id="sd" onclick="opaopa(sd)" data-isfix="true">
 
             <div class="sizebox" id="sizebox">
                 <input type="text" tabindex="3" class="size" name="sizes" id="levo" min="0" placeholder="лево"
