--- a/public/patchnote.html
+++ b/public/patchnote.html
@@ -61,6 +61,10 @@
         <ul>
             <li>Добавлен автообновлятор</li>
         </ul>
+        <h4>version 1.3.6</h4>
+        <ul>
+            <li>Исправлена проблема с импостом(видно-не видно)</li>
+        </ul>
     </div>
     <div class="todo">
         <h3>TODO List</h3>
