--- a/public/patchnote.html
+++ b/public/patchnote.html
@@ -63,7 +63,9 @@
         </ul>
         <h4>version 1.3.6</h4>
         <ul>
+            <li>автообновлятор пока убран на хрен</li>
             <li>Исправлена проблема с импостом(видно-не видно)</li>
+            <li>Внесены изменения в фасад ТПСа, улучшена видимость</li>
         </ul>
     </div>
     <div class="todo">
@@ -71,13 +73,6 @@
         <span 'style=left:20%'>zCalc</span>
         <ul>
             <li>поменять кнопку ресет</li>
-            <li>подсказка на категорию</li>
-            <li>добавить отдельную дверь</li>
-        </ul>
-        <span>TPS</span>
-        <ul>
-            <li>разнести мс и скф</li>
-
         </ul>
     </div>
 </body>
