--- a/public/patchnote.html
+++ b/public/patchnote.html
@@ -67,6 +67,10 @@
             <li>Исправлена проблема с импостом(видно-не видно)</li>
             <li>Внесены изменения в фасад ТПСа, улучшена видимость</li>
         </ul>
+        <h4>version 1.3.7</h4>
+        <ul>
+            <li>исправлен баг с 5 группой ВИТЭО</li>
+        </ul>
     </div>
     <div class="todo">
         <h3>TODO List</h3>
