--- a/public/patchnote.html
+++ b/public/patchnote.html
@@ -71,6 +71,10 @@
         <ul>
             <li>исправлен баг с 5 группой ВИТЭО</li>
         </ul>
+        <h4>version 1.3.8</h4>
+        <ul>
+            <li>Обновлен прайс на жалюзи, 21.02.2022</li>
+        </ul>
     </div>
     <div class="todo">
         <h3>TODO List</h3>
