--- a/public/patchnote.html
+++ b/public/patchnote.html
@@ -75,6 +75,10 @@
         <ul>
             <li>Обновлен прайс на жалюзи, 21.02.2022</li>
         </ul>
+        <h4>version 1.3.9</h4>
+        <ul>
+            <li>Обновлен прайс на жалюзи, 1.03.22</li>
+        </ul>
     </div>
     <div class="todo">
         <h3>TODO List</h3>
