--- a/public/patchnote.html
+++ b/public/patchnote.html
@@ -79,6 +79,10 @@
         <ul>
             <li>Обновлен прайс на жалюзи, 1.03.22</li>
         </ul>
+        <h4>version 1.3.10</h4>
+        <ul>
+            <li>Обновлен прайс на жалюзи, 10.03.22</li>
+        </ul>
     </div>
     <div class="todo">
         <h3>TODO List</h3>
