--- a/public/patchnote.html
+++ b/public/patchnote.html
@@ -83,6 +83,10 @@
         <ul>
             <li>Обновлен прайс на жалюзи, 10.03.22</li>
         </ul>
+        <h4>version 1.3.11</h4>
+        <ul>
+            <li>Обновлен прайс на жалюзи, 1.04.22</li>
+        </ul>
     </div>
     <div class="todo">
         <h3>TODO List</h3>
