--- a/public/patchnote.html
+++ b/public/patchnote.html
@@ -87,6 +87,12 @@
         <ul>
             <li>Обновлен прайс на жалюзи, 1.04.22</li>
         </ul>
+        <h4>version 1.4.0</h4>
+        <ul>
+            <li>Обновлен прайс на жалюзи, 27.04.22</li>
+            <li>Курс доллара выведен на главный экран</li>
+            <li>немного поправлена логика цены</li>
+        </ul>
     </div>
     <div class="todo">
         <h3>TODO List</h3>
