--- a/public/patchnote.html
+++ b/public/patchnote.html
@@ -93,13 +93,16 @@
             <li>Курс доллара выведен на главный экран</li>
             <li>немного поправлена логика цены</li>
         </ul>
+        <ul>
+            <li>Обновлен прайс на жалюзи, 08.07.2022</li>
+        </ul>
     </div>
     <div class="todo">
-        <h3>TODO List</h3>
+        <!-- <h3>TODO List</h3>
         <span 'style=left:20%'>zCalc</span>
         <ul>
             <li>поменять кнопку ресет</li>
-        </ul>
+        </ul> -->
     </div>
 </body>
 
