--- a/public/patchnote.html
+++ b/public/patchnote.html
@@ -96,6 +96,10 @@
         <ul>
             <li>Обновлен прайс на жалюзи, 08.07.2022</li>
         </ul>
+        <h4>version 1.4.2</h4>
+        <ul>
+            <li>Удалена наценка за площадь жалюзи Isolite</li>
+        </ul>
     </div>
     <div class="todo">
         <!-- <h3>TODO List</h3>
